--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -50,7 +50,7 @@
                                         <div class="form-group">
                                             <label for="event_name" class="col-md-4 control-label">Event Name:</label>
                                             <div class="col-md-8">
-                                                <input type="text" name="event_name" class="form-control" id="event_name" placeholder="Event Name" ng-model="formData.event_name[id]">
+                                                <input type="text" name="event_name" class="form-control" id="event_name" placeholder="Event Name" ng-model="updatedFormData.event_name[id]">
                                             </div>
                                         </div>
                                     </div>
@@ -69,7 +69,7 @@
                                         <div class="form-group">
                                             <label for="event_cost" class="col-md-4 control-label">Cost:</label>
                                             <div class="col-md-8">
-                                                <input type="text" class="form-control" id="event_cost" placeholder="Minimum Cost" ng-model="formData.event_cost[id]">
+                                                <input type="text" class="form-control" id="event_cost" placeholder="Minimum Cost" ng-model="updatedFormData.event_cost[id]">
                                             </div>
                                         </div>
                                     </div>
@@ -79,7 +79,7 @@
                                         <div class="form-group">
                                             <label for="event_overview" class="col-md-4 control-label">Event Overview:</label>
                                             <div class="col-md-8">
-                                                <textarea style="resize: none;" class="form-control" rows="6" id="event_overview" ng-model="formData.event_overview[id]"></textarea>
+                                                <textarea style="resize: none;" class="form-control" rows="6" id="event_overview" ng-model="updatedFormData.event_overview[id]"></textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -92,19 +92,19 @@
                                     <div class="col-lg-3" style="margin-left: 4%">
                                         <div class="input-group">
                                             <span class="input-group-addon">#</span>
-                                            <input type="text" class="form-control" id="hash1" ng-model="formData.event_hashtags[id][0]">
+                                            <input type="text" class="form-control" id="hash1" ng-model="updatedFormData.event_hashtags[id][0]">
                                         </div>
                                     </div>
                                     <div class="col-lg-3">
                                         <div class="input-group">
                                             <span class="input-group-addon">#</span>
-                                            <input type="text" class="form-control" id="hash2" ng-model="formData.event_hashtags[id][1]">
+                                            <input type="text" class="form-control" id="hash2" ng-model="updatedFormData.event_hashtags[id][1]">
                                         </div>
                                     </div>
                                     <div class="col-lg-3">
                                         <div class="input-group">
                                             <span class="input-group-addon">#</span>
-                                            <input type="text" class="form-control" id="hash3" ng-model="formData.event_hashtags[id][2]">
+                                            <input type="text" class="form-control" id="hash3" ng-model="updatedFormData.event_hashtags[id][2]">
                                         </div>
                                     </div>
                                 </div>
@@ -119,7 +119,7 @@
                                         <div class="form-group">
                                             <label for="venue_name" class="col-md-4 control-label">Venue Name:</label>
                                             <div class="col-md-8">
-                                                <input type="text" name="venue_name" class="form-control" id="venue_name" placeholder="Venue Name" ng-model="formData.venue_name[id]">
+                                                <input type="text" name="venue_name" class="form-control" id="venue_name" placeholder="Venue Name" ng-model="updatedFormData.venue_name[id]">
                                             </div>
                                         </div>
                                     </div>
@@ -140,7 +140,7 @@
                                         <div class="form-group">
                                             <label for="event_location" class="col-md-4 control-label">Address:</label>
                                             <div class="col-md-8">
-                                                <textarea style="resize: none;" class="form-control" rows="4" id="event_location" ng-model="formData.event_location[id]"></textarea>
+                                                <textarea style="resize: none;" class="form-control" rows="4" id="event_location" ng-model="updatedFormData.event_location[id]"></textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -149,15 +149,15 @@
                             <h2 class="schedule_heading">Event Schedule</h2>
                             <hr/>
 
-                            <div class="row" ng-repeat="d in days" ng-hide="change_event_schedule_flag">
+                            <div class="row" ng-repeat="d in countDays" ng-hide="change_event_schedule_flag">
                                 <div class="col-lg-6">
-                                    <input type="text" name="date" class="form-control modal_date_time" ng-model="formData.datetime_edit[id][d].date" placeholder="" ng-disabled="true">
+                                    <input type="text" name="date" class="form-control modal_date_time" ng-model="updatedFormData.datetime_edit[id][d].date" placeholder="" ng-disabled="true">
                                 </div>
                                 <div class="col-lg-3">
-                                    <input type="text" name="start_time" class="form-control modal_date_time" ng-model="formData.datetime_edit[id][d].start_time"  placeholder="" ng-disabled="true">
+                                    <input type="text" name="start_time" class="form-control modal_date_time" ng-model="updatedFormData.datetime_edit[id][d].start_time"  placeholder="" ng-disabled="true">
                                 </div>
                                 <div class="col-lg-3">
-                                    <input type="text" name="end_time" class="form-control modal_date_time" ng-model="formData.datetime_edit[id][d].end_time" placeholder="" ng-disabled="true">
+                                    <input type="text" name="end_time" class="form-control modal_date_time" ng-model="updatedFormData.datetime_edit[id][d].end_time" placeholder="" ng-disabled="true">
                                 </div>
 
                             </div>
@@ -180,13 +180,13 @@
                                         <div class="form-group">
                                             <label for="repeat_event" class="col-md-6 control-label">Do you want to repeat the event (Weekly/Monthly) ?</label>
                                             <div class="col-md-4">
-                                                <input type="checkbox" name="repeat_event" id="repeat_event" ng-model="formData.repeatEventCheckbox">
+                                                <input type="checkbox" name="repeat_event" id="repeat_event" ng-model="updatedFormData.repeatEventCheckbox">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="row well" ng-show="formData.repeatEventCheckbox">
+                                <div class="row well" ng-show="updatedFormData.repeatEventCheckbox">
                                     <div class="col-lg-12 form-group">
                                         <div class="col-lg-2"></div>
                                         <div class="col-lg-5">
@@ -194,13 +194,13 @@
                                                 <div class="col-lg-5">
                                                     <div class="radio">
                                                         <label>
-                                                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="weekly" ng-model="formData.repeatType" checked>
+                                                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="weekly" ng-model="updatedFormData.repeatType" checked>
                                                             Weekly {{week_checkbox}}
                                                         </label>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-7">
-                                                    <select class="form-control" id="no_of_weeks" name="no_of_weeks" ng-model="formData.no_of_weeks" ng-show="formData.repeatType == 'weekly'">
+                                                    <select class="form-control" id="no_of_weeks" name="no_of_weeks" ng-model="updatedFormData.no_of_weeks" ng-show="updatedFormData.repeatType == 'weekly'">
                                                         <option value="1">1</option>
                                                         <option value="2">2</option>
                                                         <option value="3">3</option>
@@ -219,13 +219,13 @@
                                                 <div class="col-lg-5">
                                                     <div class="radio">
                                                         <label>
-                                                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="monthly" ng-model="formData.repeatType">
+                                                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="monthly" ng-model="updatedFormData.repeatType">
                                                             Monthly
                                                         </label>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-7">
-                                                    <select class="form-control" id="no_of_months" name="no_of_months" ng-model="formData.no_of_months" ng-show="formData.repeatType == 'monthly'">
+                                                    <select class="form-control" id="no_of_months" name="no_of_months" ng-model="updatedFormData.no_of_months" ng-show="updatedFormData.repeatType == 'monthly'">
                                                         <option value="1">1</option>
                                                         <option value="2">2</option>
                                                         <option value="3">3</option>
@@ -269,22 +269,22 @@
                             <div class="row well">
 
                                 <div class="col-lg-4">
-                                    <img ng-src="{{formData.image_encoded_path_array[0]}}" class="edit_image" ng-hide="isImageHidden[0]">
+                                    <img ng-src="{{updatedFormData.image_encoded_path_array[0]}}" class="edit_image" ng-hide="isImageHidden[0]">
                                     <label for="image1" class="col-md-4 control-label">Image One: </label>
-                                    <button class="btn btn-success" ng-file-change="handleSelectedFile(formData.images[0],0)" ng-file-select ng-model="formData.images[0]" ng-multiple="false" accept="image/*" id="image1" >Attach Image One</button>
+                                    <button class="btn btn-success" ng-file-change="handleSelectedFile(updatedFormData.images[0],0)" ng-file-select ng-model="updatedFormData.images[0]" ng-multiple="false" accept="image/*" id="image1" >Attach Image One</button>
                                     <!--<progressbar max="100" value="progress_arr[0]"><span style="color:black; white-space:nowrap;">{{progress_arr[0]}}</span></progressbar>-->
                                     <div class="file_name_preview">{{newly_selected_file[0]}}</div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <img ng-src="{{formData.image_encoded_path_array[1]}}" class="edit_image" ng-hide="isImageHidden[1]">
+                                    <img ng-src="{{updatedFormData.image_encoded_path_array[1]}}" class="edit_image" ng-hide="isImageHidden[1]">
                                     <label for="image2" class="col-md-4 control-label">Image Two: </label>
-                                    <button class="btn btn-success" ng-file-change="handleSelectedFile(formData.images[1],1)" ng-file-select ng-model="formData.images[1]" ng-multiple="false" accept="image/*" id="image2" >Attach Image Two</button>
+                                    <button class="btn btn-success" ng-file-change="handleSelectedFile(updatedFormData.images[1],1)" ng-file-select ng-model="updatedFormData.images[1]" ng-multiple="false" accept="image/*" id="image2" >Attach Image Two</button>
                                     <div class="file_name_preview">{{newly_selected_file[1]}}</div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <img ng-src="{{formData.image_encoded_path_array[2]}}" class="edit_image" ng-hide="isImageHidden[2]">
+                                    <img ng-src="{{updatedFormData.image_encoded_path_array[2]}}" class="edit_image" ng-hide="isImageHidden[2]">
                                     <label for="image3" class="col-md-4 control-label">Image Three: </label>
-                                    <button class="btn btn-success" ng-file-change="handleSelectedFile(formData.images[2],2)" ng-file-select ng-model="formData.images[2]" ng-multiple="false" accept="image/*" id="image3" >Attach Image Three</button>
+                                    <button class="btn btn-success" ng-file-change="handleSelectedFile(updatedFormData.images[2],2)" ng-file-select ng-model="updatedFormData.images[2]" ng-multiple="false" accept="image/*" id="image3" >Attach Image Three</button>
                                     <div class="file_name_preview">{{newly_selected_file[2]}}</div>
                                 </div>
                             </div>
