ADDED THE PRELIMINARY SQL FILE AND DONE WITH KARMA SETUP

--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -1,12 +1,16 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="container-fluid">
+
         <!--{{eventData[0]['event_detail_id']}}-->
             <div class="row" ng-repeat="i in formData.result_length track by $index">
                 <div class="col-lg-8">
                     <eventwidget></eventwidget>
                      <div>
                         <button class="btn btn-default" ng-click="open('lg',formData, $index)">Large modal</button>
+                    </div>
+                    <div>
+                        <button class="btn btn-default" ng-click="delete(formData.event_detail_id[i])">Delete</button>
                     </div>
 
                 </div>
