adding and ed.is_active = 1 in usermodel.php

--- a/app/views/partials/eventwidget.html
+++ b/app/views/partials/eventwidget.html
@@ -1,6 +1,6 @@
 <div class="media viewEvents">
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4" style="height: 210px;">
             <img class="media-object" height="100%" width="100%" ng-src="{{encoded_image_path_array[$index]}}" alt="Media Object"/>
         </div>
         <div class="col-lg-8">
