--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -263,6 +263,7 @@
         <div class="row well">
 
             <div class="col-lg-4 col-md-4 col-sm-4">
+                <!--<img src="foo.jpg" onerror="if (this.src != 'error.jpg') this.src = 'error.jpg';">-->
                 <img height="160" width="200" ng-src="{{updatedFormData.image_encoded_path_array[0]}}" class="edit_image" ng-hide="isImageHidden[0]">
                 <label for="image1" class="col-md-4 control-label">Image One: </label>
                 <button class="btn btn-success" ng-file-change="handleSelectedFile(updatedFormData.images[0],0,updatedFormData.image[id][0].image_id, updatedFormData.image[id][0].image_path)" ng-file-select ng-model="updatedFormData.images[0]" ng-multiple="false" accept="image/*" id="image1" >Attach Image One</button>
@@ -270,13 +271,15 @@
                 <div class="file_name_preview">{{newly_selected_file[0]}}</div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
-                <img height="160" width="200" ng-src="{{updatedFormData.image_encoded_path_array[1]}}" class="edit_image" ng-hide="isImageHidden[1]">
+                <img height="160" width="200" alt="/var/www/html/shout/app/images/placeholder.jpg" onerror="this.src='/images/placeholder.jpg'" ng-src="{{updatedFormData.image_encoded_path_array[1]}}" class="edit_image" ng-hide="isImageHidden[1]">
                 <label for="image2" class="col-md-4 control-label">Image Two: </label>
                 <button class="btn btn-success" ng-file-change="handleSelectedFile(updatedFormData.images[1],1,updatedFormData.image[id][1].image_id, updatedFormData.image[id][1].image_path)" ng-file-select ng-model="updatedFormData.images[1]" ng-multiple="false" accept="image/*" id="image2" >Attach Image Two</button>
                 <div class="file_name_preview">{{newly_selected_file[1]}}</div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
+                <object data="http://localhost/shout/app/images/placeholder.jpg" type="image/*">
                 <img height="160" width="200" ng-src="{{updatedFormData.image_encoded_path_array[2]}}" class="edit_image" ng-hide="isImageHidden[2]">
+                </object>
                 <label for="image3" class="col-md-4 control-label">Image Three: </label>
                 <button class="btn btn-success" ng-file-change="handleSelectedFile(updatedFormData.images[2],2,updatedFormData.image[id][2].image_id, updatedFormData.image[id][2].image_path)" ng-file-select ng-model="updatedFormData.images[2]" ng-multiple="false" accept="image/*" id="image3" >Attach Image Three</button>
                 <div class="file_name_preview">{{newly_selected_file[2]}}</div>
